<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorAccent"/>
            <TextView
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

        </FrameLayout>

        <ImageView
            android:id="@+id/imgq"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/coklat"/>

        <TextView
            android:id="@+id/durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:text="@string/dura"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn_share"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/share"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>